src/objects/Apttus_Revenue2__Related_Agreement_Fee__c.object
<CustomObject>
    <description>Holds the many to many relationships between agreement fee objects</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee_From_Text__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Fee_From__r.Apttus_Revenue2__Revenue_Type_Text__c  &amp; &quot;/&quot; &amp;  Apttus_Revenue2__Agreement_Fee_From__r.Apttus_Revenue2__Revenue_Subtype_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Fee From Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related agreement fee</description>
        <inlineHelpText>Related agreement fee</inlineHelpText>
        <label>Agreement Fee From</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Related Agreement Fees (Agreement Fee From)</relationshipLabel>
        <relationshipName>Related_Agreement_Fees_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee_To_Text__c</fullName>
        <formula>Apttus_Revenue2__Agreement_Fee_To__r.Apttus_Revenue2__Revenue_Type_Text__c  &amp; &quot;/&quot; &amp;  Apttus_Revenue2__Agreement_Fee_To__r.Apttus_Revenue2__Revenue_Subtype_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Fee To Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related agreement fee</description>
        <inlineHelpText>Related agreement fee</inlineHelpText>
        <label>Agreement Fee To</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Related Agreement Fees (Agreement Fee To)</relationshipLabel>
        <relationshipName>Related_Agreement_Fees_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Agreement Fee</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Related Agreement Fee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Agreement Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>